# thrml-os

./: .gitignore  README.md  pyproject.toml
examples/: __init__.py  basic_usage.py  priority_scheduling.py  streaming_samples.py
src/thrml_os/: __init__.py  cli.py  client.py
src/thrml_os/cli/: __init__.py  main.py
src/thrml_os/hal/: __init__.py  backend.py  jax_backend.py  registry.py  simulator.py
src/thrml_os/models/: __init__.py  device.py  job.py  sample.py  schedule.py
src/thrml_os/runtime/: __init__.py  checkpoint.py
src/thrml_os/scheduler/: __init__.py  queue.py  scheduler.py
tests/: __init__.py  conftest.py  test_hal.py  test_models.py  test_scheduler.py
