[project]
name = "thrml-os"
version = "0.1.0"
description = "Thermodynamic Computing Operating System - Runtime for probabilistic graphical models on Extropic hardware"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "THRML-OS Contributors"},
]
license = {text = "Apache-2.0"}
keywords = ["probabilistic-computing", "pgm", "gibbs-sampling", "thermodynamic", "extropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "thrml>=0.1.3",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.2",
    "jaxtyping>=0.2.23",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.4.20",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
thrml-os = "thrml_os.cli.main:main"

[project.urls]
Homepage = "https://github.com/thrml-os/thrml-os"
Documentation = "https://thrml-os.readthedocs.io"
Repository = "https://github.com/thrml-os/thrml-os"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
